<resources>
    <string name="app_name">Hotelier</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="management_page">Management</string>
    <string name="customer_page">Customer</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="check_in_date">Check In Date</string>
    <string name="check_out_date">Check Out Date</string>
    <string name="postal_code">Postal Code</string>
    <string name="postal_code_hint">M5S 1C7</string>
    <string name="search_listings">Search Listings</string>
    <string name="select_date_range">Select Dates</string>
    <string name="selected_dates">Select Dates</string>
    <string name="select_destination"><font fgcolor='#FFFFFF'>Select Destination</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_add_rooms">Leanback AddRooms</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="_guests">" Guests"</string>
    <string name="back_button">Back Button</string>
    <string name="hotel_creator">Hotel Creator</string>
    <string name="add_address">Add address</string>
    <string name="add_amenities_ignore_unfinished">Add amenities (ignore, unfinished)</string>
    <string name="view_hotel_details">View Hotel Details</string>
    <string name="submit">Submit</string>
    <string name="enter_your_hotel_name">Enter your hotel name</string>
    <string name="add_rooms">Add rooms</string>
    <string name="available_rooms">Available Rooms:</string>
    <string name="rating">Rating</string>
    <string name="address">Address</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="explore">Explore</string>
    <string name="enter_destination">Enter destination</string>
    <string name="select_a_destination">Select a destination</string>
    <string name="select_dates">Select dates</string>
    <string name="_1">1</string>
    <string name="guests">Guests</string>
    <string name="search">Search</string>
    <string name="add_guest">Add Guest</string>
    <string name="remove_guest">Remove Guest</string>
    <string name="amenity_name">Amenity name</string>
    <string name="beds">Beds:</string>
    <string name="bed_size">Bed Size:</string>
    <string name="capacity">Capacity:</string>
    <string name="availability">Availability:</string>
    <string name="_0">$0</string>
    <string name="per_night">per night</string>
    <string name="city_state_country">City, State, Country</string>
    <string name="location">Location</string>
    <string name="hotelier">Hotelier</string>
    <string name="recent_searches">Recent searches</string>
    <string name="check_out_new_listings">Check out new listings</string>
    <string name="find_a_hotel_by_location">Find a hotel by location.</string>
    <string name="favourites">Favourites</string>
    <string name="you_must_sign_in_to_view_this_content">You must sign in to view this content</string>
    <string name="exit_button">Exit Button</string>
    <string name="street_number">Street number</string>
    <string name="street_name">Street name</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="latitude_longitude">Latitude, Longitude</string>
    <string name="save">Save</string>
    <string name="amenities">Amenities</string>
    <string name="room">Room</string>
    <string name="set_schedule">Set schedule</string>
    <string name="price_per_night">Price per night</string>
    <string name="select_a_bed_type_and_enter_the_total">Select a bed type and enter the total</string>
    <string name="total_beds">Total beds</string>
    <string name="twin">Twin</string>
    <string name="king">King</string>
    <string name="queen">Queen</string>
    <string name="double_string">Double</string>
    <string name="add_room">Add room</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_user">Edit user</string>
    <string name="status_manager">Status: manager</string>
    <string name="list_a_hotel">List a hotel</string>
    <string name="hotel_image">Hotel Image</string>
    <string name="rooms_available">Rooms available:</string>
    <string name="lowest_price">lowest price</string>
    <string name="favorites">Favorites</string>
    <string name="add_amenities">Add amenities</string>
    <string name="address_">\"Address: \"</string>
    <string name="rating_">\"Rating: \"</string>
    <string name="success">Success</string>
    <string name="add_another_room">Add another room</string>
    <string name="register_today">Register today.</string>
    <string name="welcome_back">\"Welcome back \"</string>
    <string name="add_amenities_">Add Amenities</string>
</resources>