<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:elevation="999dp"
    tools:context=".management_hotel_listing_activity.HotelCreateRoomsFragment">

    <ImageButton
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_baseline_close_24"
        app:tint="@color/black"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/exit_button" />

    <TextView
        android:id="@+id/textRoomsCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/room"
        android:textColor="@android:color/black"
        android:textSize="48sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setScheduleBtn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="313dp"
        android:layout_height="65dp"
        android:layout_below="@+id/textRoomsCreate"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/background_secondary"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|center_vertical"
        android:text="@string/set_schedule"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/white"
        app:icon="@drawable/ic_baseline_edit_calendar_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/capacityTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setScheduleBtn"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/background_secondary"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintEnabled="false"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/roomCapacity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/capacity"
            android:inputType="number"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capacityTextLayout"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/background_secondary"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pricePerNight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/price_per_night"
            android:inputType="numberDecimal"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/bedsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceLayout"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/select_a_bed_type_and_enter_the_total"
        android:textColor="@color/black"
        android:textSize="16sp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numBedsLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="96dp"
        android:layout_height="87dp"
        android:layout_below="@+id/bedsLabel"
        android:layout_marginStart="46dp"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/background_secondary"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintEnabled="false"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/totalBeds"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/total_beds"
            android:inputType="number"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bedsLabel"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/numBedsLayout"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twin" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/king" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queen" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_string" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveRoomBtn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="313dp"
        android:layout_height="65dp"
        android:layout_below="@id/chip_group_choice"
        android:layout_marginStart="46dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/inter_bold"
        android:text="@string/add_room"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/white">

    </com.google.android.material.button.MaterialButton>
</RelativeLayout>