<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_default"
    tools:context=".customer_activities.customer_rooms_activity.CustomerHotelRoomsActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameMapsLay"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/hotelNameDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/frameMapsLay"
            android:layout_marginStart="46dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/hotel_name"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/addressTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hotelNameDesc"
            android:layout_marginStart="46dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ratingTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressTxt"
            android:layout_marginStart="46dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/availableRoomsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingTxt"
            android:layout_marginStart="46dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/available_rooms"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/roomsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/availableRoomsTxt"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:foregroundGravity="center_horizontal"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            android:padding="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>
</ScrollView>